# cppxx

./: CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  cppxx.toml
cmake/: cppxx.cmake
cmd/: add.cpp  build.cpp  cli.cpp  cli.h  common.h  compile_command.cpp  compile_command.h  generate_compile_commands.cpp  git.cpp  git.h  main.cpp  options.h  resolve_paths.cpp  resolve_remotes.cpp  resolve_target.cpp  resolve_vars.cpp  run.cpp  schema.cpp  system.cpp  system.h  target.h  workspace.cpp  workspace.h  workspace_archive.cpp  workspace_assign.cpp  workspace_build.cpp  workspace_clear.cpp  workspace_compile_commands.cpp  workspace_configure.cpp  workspace_encrypt.cpp  workspace_exec.cpp  workspace_expand.cpp  workspace_generate_compile_commands.cpp  workspace_git.cpp  workspace_info.cpp  workspace_parse.cpp  workspace_populate.cpp  workspace_resolve_dependencies.cpp
include/cppxx/: debug.h  defer.h  error.h  iterator.h  json.h  literal.h  match.h  optional.h  sql.h  tuple.h
include/cppxx/cli/: options.h
include/cppxx/multithreading/: channel.h
include/cppxx/sql/: mysql.h  postgres.h  sql.h  sqlite3.h
include/cppxx/sql/core/: connection.h  ddl.h  dml.h  dql.h  format.h  statement.h
reflectcpp/: reflectcpp.h
src/: debug.cpp
tests/: CMakeLists.txt  iterator.cpp  json.cpp  optional.cpp  reflect.cpp  sha256.cpp  sql.cpp  tuple.cpp
